# rust-oauth2

./: README.md  docker-compose.yml
api/: Cargo.toml
api/src/: app_state.rs  lib.rs  main.rs  middleware.rs  repository.rs
api/src/entity/: articles.rs  mod.rs  prelude.rs  users.rs
api/src/handler/: article.rs  user.rs
docker/database/init/: init.sql
front/: .eslintrc.json  README.md  bun.lockb  entity.ts  package.json
front/app/: actions.ts  header.tsx  layout.tsx  page.tsx
front/app/api/articles/: route.ts
front/app/api/articles/[id]/: route.ts
front/app/api/fetchArticle/: route.ts
front/app/api/fetchToken/: route.ts
front/app/api/fetchTokenByRefreshToken/: route.ts
front/app/api/fetchTokenWithRefresh/: route.ts
front/app/api/fetchUser/: route.ts
front/app/api/sample/: route.ts
front/app/api/signOut/: route.ts
front/app/article/[id]/: page.tsx
front/app/article/[id]/edit/: page.tsx
front/app/article/new/: page.tsx
front/app/callback/: page.tsx  route.ts
front/app/sample/: route.ts
front/app/user/: page.tsx
front/components/: authCheck.tsx
front/lib/: serverActions.ts  session.ts
oauth2/: Cargo.toml
oauth2/src/: app_state.rs  lib.rs  main.rs  middleware.rs  repository.rs  session_manager.rs  validation.rs
oauth2/src/entity/: mod.rs  oauth2_clients.rs  oauth2_codes.rs  oauth2_refresh_tokens.rs  oauth2_tokens.rs  prelude.rs
oauth2/src/handler/: authorization.rs  authorize.rs  create_token.rs  introspect.rs  me.rs  mod.rs  signout.rs  signup.rs
oauth2/src/repository/: db_repository.rs  mod.rs  repository.rs
oauth2/src/util/: flash_message.rs  jwt.rs  mod.rs  request_context.rs  session_manager.rs  str.rs
oauth2/templates/: authorize.html  index.html  new.html  signup.html
oauth2/templates/signup/: complete.html
