[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0.12.0", features = [
  "sqlx-postgres",
  "runtime-async-std-native-tls",
  "macros",
] }
serde_json = "1.0.115"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = "0.12.4"
validator = { version = "0.17.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
