[package]
name = "oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0.12.0", features = [
  "sqlx-postgres",
  "runtime-async-std-native-tls",
  "macros",
] }
askama = "0.12.1"
validator = { version = "0.17.0", features = ["derive"] }
axum-valid = "0.17.0"
regex = "1.10.4"
uuid = "1.8.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
async-session = "3.0.0"
async-redis-session = "0.2.2"
serde_json = "1.0.115"
