[package]
name = "oauth2"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.23.0", features = ["v4"] }
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-async-std-native-tls",
  "macros",
] }
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = "0.24.0"
regex = "1.12.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-sessions = "0.14.0"
tower-sessions-redis-store = { version = "0.16.0", features = ["enable-native-tls"] }
serde_json = "1.0.149"
chrono = "0.4.44"
bcrypt = "0.19.0"
url = "2.5.8"
jsonwebtoken = "10.3.0"
rand = "0.10.0"
tera = "1.20.1"
time = "0.3"
